src/css/style.css
:root {
  --black: #000000;
  --white: #ffffff;
  --grey-light: #d9d9d9;
  --grey-dark: #a9a4a4;

  --red: #e4003b;
  --blue: #0087dc;
  --green: #33ff00;

  --default-radius: 30px;
  --max-section-width: 800px;
}

html body {
  color: var(--black);
  font-family: Inter, sans-serif;
}

h1 {
  padding: 2rem 0 0 0;
}

p {
  margin-bottom: 1rem;
}

.page-wrapper {
  text-align: center;
}

.section {
  margin: 0 auto;
  padding: 4.5rem 1rem;
  width: 100%;
}

#section-four,
#section-five .graph-container,
#section-six,
#section-seven,
#section-ten {
  background: var(--black);
}

#section-eleven,
#section-twelve,
#section-fourteen {
  max-width: 100%;
  width: 100%;
}

#section-eleven h2.heading {
  font-size: 2.5rem;
  margin: 0 auto;
  max-width: var(--max-section-width);
  padding: 2rem 0;
  width: 100%;
}

#section-twelve,
#section-fourteen {
  padding-top: 0;
}

/** Main Text **/

.main-texts {
  margin: 0 auto;
  max-width: var(--max-section-width);
}

.main-text {
  background: var(--white);
  border: solid var(--black) 1px;
  border-radius: var(--default-radius);
  padding: 30px 30px 20px 30px;
  text-align: left;
}

.main-text-title {
  font-size: 1.375rem;
  padding: 0 0 20px 0;
}

.main-text-body {
  background: url(/images/main-text-icons.svg) bottom right no-repeat;
  background-size: 100px;
  font-size: 1.25rem;
  padding-bottom: 40px;
}

/** Post **/

.posts {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.post {
  background: var(--white);
  align-items: center;
  display: flex;
  flex-direction: column;
  margin: 20px 55px;
  max-width: 420px;
  text-align: center;
}

.post-inner {
  border: solid var(--black) 1px;
  border-radius: var(--default-radius);
  padding: 10px 20px;
}

#section-ten .post {
  background: var(--black);
}

#section-ten .post-inner {
  background: var(--black);
  border: solid var(--white) 1px;
  color: var(--white);
}

.post-avatar {
  margin: -55px 0 0 -55px;
  align-self: start;
}

.post-date {
  background-color: var(--grey-light);
  border-radius: var(--default-radius);
  font-size: 1rem;
  font-weight: normal;
  margin: 20px 0;
  padding: 4px 0;
  width: 250px;
}

.post-forwarded-from {
  background: url(/images/arrow_email_forward_post_right_icon.svg) no-repeat;
  font-size: 0.75rem;
  font-weight: normal;
  padding: 5px 0 0 28px;
  text-align: left;
}

.post-body {
  font-size: 1.125rem;
  padding: 20px 0;
  text-align: left;
}

.post-meta-info {
  color: var(--grey-dark);
  font-size: 1rem;
  text-align: right;
}

.post-view-count {
  background: url(/images/eye.svg) no-repeat;
  padding: 10px 0 0 30px;
}

.post-time {
  padding-left: 10px;
}

/* Video */
.video-container {
  background-color: black;
  height: 0px;
  margin-bottom: 2em;
  padding-top: 56.25%;
  position: relative;
}

.video {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

/** Message **/
.messages {
  border: solid 1px var(--grey-dark);
  margin: 0 auto;
  max-width: 1040px;
}

.messages h3 {
  background-color: var(--grey-light);
  padding: 10px 20px;
}

.messages-inner {
  display: flex;
  flex-direction: column;
  padding: 20px;
}

.message-bubble {
  position: relative;
}

.typing-dots {
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 20px;
}

.right .typing-dots {
  right: 20px;
}

.left .typing-dots {
  left: 20px;
}

.typing-dots .dot {
  background-color: var(--black);
  border-radius: 100%;
  height: 8px;
  width: 8px;
}

.message-body {
  border: solid 1px var(--grey-dark);
  border-radius: 2rem;
  margin: 10px 0;
  padding: 20px;
}

.left .message {
  margin-right: 30%;
}

.right .message {
  margin-left: 30%;
}

.left .message .message-body {
  background-color: var(--grey-light);
}

.right .message .message-body {
  background-color: var(--grey-dark);
  border-color: var(--black);
}
.message-time {
  margin: 20px 0;
}

.right .message .message-time {
  text-align: right;
}

.left .message .message-time {
  text-align: left;
}

/** Image **/

.images {
  margin-top: 3rem;
  position: relative;
}

.images-mobile {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.image {
  position: sticky;
  top: 3rem;
}

.image img {
  margin: 0 auto;
}

#section-six .image img {
  max-width: 80%;
  opacity: 50%;
}

#section-six .image img[alt="Image Recognition 1"] {
  opacity: 90%;
}

/** Chart **/
.graph-container {
  color: var(--white);
  margin: 2rem auto;
  padding: 6rem 0 2rem 0;
}

.chart {
  font-size: 0.75rem;
  margin: 4rem auto;
  max-width: 80%;
}

/** Faces with information **/
.faces-with-info {
  align-items: flex-start;
  background-image: url(/images/info-faces/background.png);
  background-size: cover;
  background-repeat: no-repeat;
  color: var(--white);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 500px;
  justify-content: center;
  width: 100%;
}

#profile-fade-image-1 {
  padding: 4rem 1rem;
}

#profile-fade-image-2 {
  padding: 6rem 1rem 0 0;
}

#profile-fade-image-3 {
  padding: 2rem 1rem 0 0;
}

.profile-info {
  font-size: 0.75rem;
  margin-top: 100px;
  padding-left: 1rem;
}

.profile-info p {
  margin-bottom: 0;
}

/** Portrait **/
.portraits {
  display: flex;
  flex-flow: wrap;
  justify-content: center;
}

.portrait {
  height: 100%;
  justify-content: center;
  opacity: 2%;
  width: 80px;
}

/** Terminal **/
.terminal-container {
  font-family: "Source Code Pro", sans-serif;
  margin-top: 4.5rem;
  padding: 4.5rem 0;
}

.terminal {
  border: 2px solid var(--grey-dark);
  height: 100%;
  margin: 0 auto;
  max-width: var(--max-section-width);
  overflow: auto;
  text-align: left;
}

.terminal h3 {
  background: var(--grey-dark);
  color: var(--black);
  padding: 0 1rem;
}

.terminal h3 + p,
.terminal .output-container {
  padding: 0 1rem;
}

.terminal .input-span .prompt {
  padding-left: 1rem;
}

.terminal .user-name {
  color: var(--green);
}

.terminal .machine-name {
  color: var(--blue);
}

.terminal input,
.terminal-container {
  background: var(--black);
  color: var(--white);
}

.terminal span.command {
  /* add extra pixel because input has cursor */
  margin-left: 0.575rem;
}

.terminal input {
  margin-left: 0.5rem;
}

.terminal input:focus-visible,
.terminal input {
  border: none;
  outline: none;
}

.terminal .help ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding-left: 1rem;
}

.terminal .help ul ul {
  padding: 0;
}

.terminal .help .sub-command-list li:not(.requires-sub-commands) {
  padding-left: 1rem;
}

.terminal .help li {
  display: flex;
}

.terminal .help li .command-name {
  font-weight: bold;
  margin-right: 1rem;
}

.terminal .help li .command-name::after {
  content: ":";
}

.terminal .error {
  color: var(--red);
}

/** Ticker **/
.tickers {
  height: 0;
}

.ticker {
  background-color: var(--black);
  color: var(--white);
  padding: 10px 20px;
  position: relative;
  width: fit-content;
  z-index: 99;
}

/** Final ticker **/
h2.final-ticker {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 10px auto;
}

/** Draggable Pile **/

.pile {
  margin-top: 5rem;
  border-top: 1px solid var(--black);
  border-bottom: 1px solid var(--black);
  height: 100vh;
  /* https://piccalil.li/blog/creating-a-full-bleed-css-utility */
  margin-left: calc(50% - 50vw); /* getting overflow on chrome */
  margin-right: calc(50% - 50vw); /* getting overflow on chrome */
  overflow: hidden;
  position: relative;
  width: 100vw;
}

.card {
  position: absolute;
}

.image-constraint {
  height: 60vh;
  width: 40vw;
}

.post-draggable {
  background-color: var(--white);
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
  display: grid;
  font-family: monospace;
  font-size: 1rem;
  gap: 1rem;
  padding: 1rem 2rem;
  grid-template-columns: max-content 1fr;
  grid-template-rows: auto;
  grid-template-areas:
    "avatar forwardedFrom"
    "empty content"
    "empty meta";
  width: 520px;
}

.post-avatar-draggable {
  grid-area: avatar;
}

.post-forwarded-from-draggable {
  grid-area: forwardedFrom;
  padding-top: 0.25rem;
}

.post-content-draggable {
  grid-area: content;
  text-align: left;
}

.post-meta-draggable {
  display: flex;
  flex-direction: row-reverse;
  grid-area: meta;
  justify-content: space-between;
}

.post-view-count-draggable {
  position: relative;
  margin-left: 2rem;
}
.post-view-count-draggable::before {
  display: inline-block;
  position: absolute;
  content: url(/images/eye.svg);
  left: -2rem;
  top: -0.35rem;
}

.post-date-time-draggable {
  display: flex;
  gap: 0.5rem;
}

